# CODINGS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODINGS  Makefile  README.md  app_main.cpp  cmake_install.cmake  conversions.hpp
include/: conversions.hpp  merkle.hpp
src/: SHA256.cpp  conversions.hpp
